# compile-time-printer

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.rst  CMakeLists.txt  MANIFEST.in  README.rst  app.2e4c9eab2697f22c3051.js  app.311072d06c1d1afb85da.js  app.48b1d3520e6892d7f4b6.js  app.78d7aa1a5c1a324c6634.js  app.98ddb57ef7a27e6432d2.js  app.b53a85b8ecd147062950.js  app.css  editor.worker.2a088a3e720ddbb79031.js  editor.worker.7a683e7cd677be0602d9.js  index.html  runtime.2ad3e6d07c101d4b0fe6.js  runtime.6757f143c22333b0fc4d.js  setup.cfg  setup.py  vendors.12962d31cb0fb2d934c4.js  vendors.353435e61bc74fc99220.js  vendors.38de894d344d22acf6a7.js  vendors.38de894d344d22acf6a7.js.LICENSE.txt  vendors.72c61015497229b0f899.js  vendors.73df3713cf2126b779ed.js  vendors.9d38e74a1c4d081ead30.js  vendors.9ef15d932dd6469e292e.js  vendors.c3bd7547d4bcdfa42fb9.js  vendors.css
.conan/: conanfile.py
.conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
.github/workflows/: pages.yml  publish.yml  testing.yml
include/ctp/: ctp.hpp
src/compile_time_printer/: __init__.py  ctp.py
tests/: conftest.py  g++  test_main.py  test_parser.py
tests/data/: CMakeLists.txt  example.cpp  fibonacci.cpp  fibonacci_with_noise.cpp  no_print_statement.cpp  output_stream.cpp  type_stack.cpp  user_defined_type.cpp  value_stack.cpp  workarounds.cpp
web/: .eslintrc.js  package-lock.json  package.json  webpack.config.js
web/src/: index.html
web/src/css/: style.scss
web/src/js/: ctp.js  ctp_wrapper.py  editor.js  index.js  playground.js
